Right-align 'Edit on GitHub' button

--- a/_static/override.css
+++ b/_static/override.css
@@ -13,3 +13,10 @@
 .header-override img {
   width: 200px;
 }
+
+.wy-breadcrumbs li.wy-breadcrumbs-aside {
+  display: block;
+  width: 100%;
+  text-align: right;
+  margin-bottom: -25px;
+}
